compiler/testData/diagnostics/tests/extensions/contextReceivers/syntaxError.kt
// RUN_PIPELINE_TILL: SOURCE
// DIAGNOSTICS: -CONTEXT_RECEIVERS_DEPRECATED
// FIR_IDENTICAL
// LANGUAGE: +ContextReceivers

context(
<!SYNTAX!><!>fun foo() {
}